# stripe-mock-tutorial

./: README.md  pyproject.toml
checkout/: serializers.py  services.py  test_services.py  test_views.py  urls.py  views.py
core/: settings.py  urls.py
